# pixel

./: .gitignore  CMakeLists.txt  main.cpp
include/: Camera.h  Math_Utils.h  RayMarching.h  Renderer.h  storage.h
src/: Renderer.cpp  storage.cpp
